# RAID-PoC

./: .gitignore  Makefile  Procfile.dev  README.md  environment.yml  example.env  main.py  pyproject.toml  redis.conf  requirements.txt  run_task.py  sqlalchemy_dbconnection_test.py  tasks.py
.github/workflows/: unit_tests.yml
api/: __init__.py  main.py  middleware_logging.py  schemas.py
db/: __init__.py  models.py  session.py
scripts/: __init__.py  notify_finalize_job.py  run_inference.sh
tasks/: __init__.py  slurm_tasks.py
test_util_files/: sqlalchemy_dbconnection_test.py
tests/unit/utils/simulate_api_calls/: test_submit_job.py
tests/unit/utils/tasks/: test_submit_job.py
utils/: clear_db.py  config.py  init_db.py  logging_config.py
utils/simulate_api_call/: submit_job.py
utils/simulate_api_calls/: check_status.py
utils/tasks/: check_status.py  submit_job.py
