[project]
name = "raid-poc"
version = "0.1.0"
description = "RAID PoC, simulating Sectra + Inference + Orchestrator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.1.1",
    "uv>=0.7.20",
    "celery>=5.5.3",
    "fastapi>=0.116.0",
    "python-dotenv>=1.1.1",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]
